--- a/app/views/courses/spherification.html.haml
+++ b/app/views/courses/spherification.html.haml
@@ -18,10 +18,10 @@
 
 - if current_user
   :javascript
-    mixpanel.track('Course Viewed', {'distinct_id' : "#{current_user.id}", 'course title' : document.title, 'url' : window.location.pathname});
+    mixpanel.track('Course Viewed', {'distinct_id' : "#{current_user.id}", 'course' : "#{course.title}", 'url' : window.location.pathname});
 - else
   :javascript
-    mixpanel.track('Course Viewed', {'course title' : document.title, 'url' : window.location.pathname});
+    mixpanel.track('Course Viewed', {'course title' : "#{course.title}", 'url' : window.location.pathname});
 
 - if course.additional_script
   = course.additional_script.html_safe
