--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -283,6 +283,10 @@ a:hover
   .media-centered
     margin-bottom: 20px
 
+.gallery-filter
+  input
+    margin-top: -10px
+
 .section-small
   margin-top: 10px
 
