--- a/app/views/shared/_gallery.html.haml
+++ b/app/views/shared/_gallery.html.haml
@@ -68,6 +68,9 @@
     %div(ng-show="nonDefaultFilters()" ng-click="clearFilters()")
       = link_to 'Clear x', 'javascript:void(0);'
 
+  .pull-right
+    %input.search-query(placeholder="Search..." ng-model="filters.search_all")
+
 %div.pull-left(galleryscroll='load_data()')
   .media-box-3(ng-cloak='' ng-repeat='activity in activities' ng-animate="'gallery-animation'")
     %a(href= 'activities/{{activity.slug}}')
