--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,7 +21,7 @@
       %link{href: "/favicon-dev.png"}
     - else
       %link{href: "/favicon.ico", rel: "shortcut icon"}
-
+    %a{href: 'https://plus.google.com/106370441183974123730?rel=author'}
     %link{href: "http://fonts.googleapis.com/css?family=Raleway:200,400,500,600,700", rel: "stylesheet", type: "text/css"}
     %link{href: "//netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css", rel: "stylesheet", type: "text/css"}
     %meta{:name => "google-translate-customization", :content => "d64492c5d22d7921-60170f9c9b7267c6-g7179c5f7a7e64573-d"}
