--- a/app/views/courses/index.html.haml
+++ b/app/views/courses/index.html.haml
@@ -1,7 +1,11 @@
+- content_for :title, "Courses"
+- content_for :description, "Become a better by cook by learning from these amazing courses."
+- content_for :keywords, @courses.map(&:title).to_sentence
+
 .container
   .row
     .span12
-      %h2 Courses
+      %h1 Courses
       = paginate @courses
 
 - @courses.each do |course|
