--- a/app/views/sciences/index.html.haml
+++ b/app/views/sciences/index.html.haml
@@ -18,7 +18,7 @@
   .row
     .span12#gallery-count{:'gallery-count' => "#{@sciences_count}"}
       %div(ng-controller='GalleryController')
-        %h1
+        %span(ng-model="admin_signed_in" ng-init="admin_signed_in='#{admin_user_signed_in?}'")
         / .flat-form
         /   %form
         /     %input(ng-model='search' placeholder='Enter Name')
