--- a/app/assets/stylesheets/voting.css.sass
+++ b/app/assets/stylesheets/voting.css.sass
@@ -1,2 +1,20 @@
 .votable
-  background: blue
+  width: 100%
+  height: 100px
+  float: left
+  .votable-vote-up
+    width: 10%
+    float: left
+    background: green
+  .votable-text
+    width: 70%
+    float: left
+    background: orange
+  .votable-sharing
+    width: 10%
+    float: left
+    background: blue
+  .votable-comments
+    width: 10%
+    float: left
+    background: red
