--- a/app/views/polls/show.html.haml
+++ b/app/views/polls/show.html.haml
@@ -14,4 +14,6 @@
           .votable-text
             %h2= votable.title
           .votable-sharing
+            sharing
           .votable-comments
+            comments
