--- a/app/views/polls/show.html.haml
+++ b/app/views/polls/show.html.haml
@@ -11,8 +11,9 @@
           .votable-vote-up
             %a.btn
               %i.icon-chevron-up
-          .votable-text
-            %h2= votable.title
+          .votable-text-wrapper
+            .votable-text
+              %h2= votable.title
           .votable-sharing
             sharing
           .votable-comments
