--- a/app/assets/stylesheets/voting.css.sass
+++ b/app/assets/stylesheets/voting.css.sass
@@ -3,29 +3,35 @@
 .votable
   width: 100%
   height: 100px
-  position: relative
+  float: left
   .votable-vote-up
-    width: 100px
+    width: 4%
+    margin-right: 1%
     float: left
-    background: green
-  .votable-text-wrapper
-    position: absolute
-    top: 0
-    left: 0
-    width: 100%
-    padding-left: 100px
-    padding-right: 200px
-    @include boxsizing
-    .votable-text
-      width: 100%
-      background: orange
-      h2
-        margin: 0px
+  .votable-text
+    width: 75%
+    float: left
   .votable-sharing
-    width: 100px
-    float: right
-    background: blue
+    width: 9%
+    margin-left: 1%
+    float: left
   .votable-comments
-    width: 100px
-    float: right
-    background: red
+    width: 9%
+    margin-left: 1%
+    float: left
+
+.votable-btn
+  display: inline-block
+  text-align: center
+  width: 100%
+  padding: 10px
+  font-size: 30px
+  color: $light-gray
+  background: $offwhite
+  border: 0px
+  @include boxsizing
+  @include transition(all 200ms)
+  &:hover
+    cursor: pointer
+    background: $light-gray
+    color: gray
