--- a/app/assets/stylesheets/voting.css.sass
+++ b/app/assets/stylesheets/voting.css.sass
@@ -1,26 +1,25 @@
 @import 'mixins'
 
-.votable
+.poll_item
   width: 100%
-  height: 100px
   float: left
-  .votable-vote-up
+  .poll-item-vote-up
     width: 4%
     margin-right: 1%
     float: left
-  .votable-text
+  .poll-item-text
     width: 75%
     float: left
-  .votable-sharing
+  .poll-item-sharing
     width: 9%
     margin-left: 1%
     float: left
-  .votable-comments
+  .poll-item-comments
     width: 9%
     margin-left: 1%
     float: left
 
-.votable-btn
+.poll-item-btn
   display: inline-block
   text-align: center
   width: 100%
