--- a/app/views/polls/show.html.haml
+++ b/app/views/polls/show.html.haml
@@ -25,9 +25,21 @@
     .span12(ng-controller='VotesController')
       %h1
         {{poll.title}}
-      %div(ng-repeat='poll_item in poll.poll_items')
+      %div(ng-repeat='poll_item in poll.poll_items' ng-cloak)
         .poll-item
           .poll-item-vote-up
+            - current_user_votes = 'false'
+            %span(ng-model="current_user_votes" ng-init="current_user_votes=#{current_user_votes}")
+            %span(ng-switch on="current_user_votes")
+              %span(ng-switch-when='true')
+                .poll-item-btn.poll-item-btn-voted
+                  %i.icon-chevron-up
+                  / {{votes_count}}
+              %span(ng-switch-when='false')
+                .poll-item-btn(ng-click="voteObject('PollItem', 'poll_item.id')")
+                  %i.icon-chevron-up
+                  %span(ng-show="votes_count > 0")
+                    / {{votes_count}}
           .poll-item-text
             %h2
               {{poll_item.title}}
