--- a/app/views/polls/show.html.haml
+++ b/app/views/polls/show.html.haml
@@ -23,7 +23,7 @@
 .container#poll{data: {:'poll-id' => "#{@poll.id}"}}
   .row
     .span12(ng-controller='VotesController')
-      = current_user_votes = current_user.votes.scoped_by_type('PollItem').map(&:votable_id)
+      - current_user_votes = current_user.votes.scoped_by_type('PollItem').map(&:votable_id)
       %span(ng-model="current_user_votes" ng-init="current_user_votes=#{current_user_votes}")
       %h1
         {{poll.title}}
@@ -36,7 +36,7 @@
                   %i.icon-chevron-up
                   / {{votes_count}}
               %span(ng-switch-when='false')
-                .poll-item-btn(ng-click="voteObject('PollItem', 'poll_item.id')")
+                .poll-item-btn(ng-click="voteObject('PollItem', poll_item.id, poll_item)")
                   %i.icon-chevron-up
                   %span(ng-show="votes_count > 0")
                     / {{votes_count}}
