--- a/app/views/polls/show.html.haml
+++ b/app/views/polls/show.html.haml
@@ -30,13 +30,13 @@
       %div(ng-repeat='poll_item in poll.poll_items' ng-cloak)
         .poll-item
           .poll-item-vote-up
-            %span(ng-switch on="current_user_voted_for_this({{poll_item.id}})")
+            %span(ng-switch on="current_user_voted_for_this({{poll_item}})")
               %span(ng-switch-when='true')
                 .poll-item-btn.poll-item-btn-voted
                   %i.icon-chevron-up
                   / {{votes_count}}
               %span(ng-switch-when='false')
-                .poll-item-btn(ng-click="voteObject('PollItem', poll_item.id, poll_item)")
+                .poll-item-btn(ng-click="voteObject({{poll_item}})")
                   %i.icon-chevron-up
                   %span(ng-show="votes_count > 0")
                     / {{votes_count}}
