--- a/app/views/polls/show.html.haml
+++ b/app/views/polls/show.html.haml
@@ -27,7 +27,7 @@
       %span(ng-model="current_user_votes" ng-init="current_user_votes=#{current_user_votes}")
       %h1
         {{poll.title}}
-      %div(ng-repeat='poll_item in poll.poll_items' ng-cloak)
+      %div(ng-repeat="poll_item in poll.poll_items | orderBy:'-votes_count'" ng-cloak)
         .poll-item
           .poll-item-vote-up
             %span(ng-switch on="current_user_voted_for_this({{poll_item}})")
@@ -36,7 +36,7 @@
                   %i.icon-chevron-up
                   / {{votes_count}}
               %span(ng-switch-when='false')
-                .poll-item-btn(ng-click="voteObject({{poll_item}})")
+                .poll-item-btn(ng-click="voteObject(poll_item)")
                   %i.icon-chevron-up
                   %span(ng-show="votes_count > 0")
                     / {{votes_count}}
