--- a/app/views/polls/show.html.haml
+++ b/app/views/polls/show.html.haml
@@ -30,7 +30,8 @@
       %div(ng-repeat="poll_item in poll.poll_items | orderBy:'-votes_count'" ng-cloak)
         .poll-item
           .poll-item-vote-up
-            %span(ng-switch on="poll_item.voted_on = current_user_voted_for_this({{poll_item}})")
+            / %span(ng-switch on="current_user_voted_for_this({{poll_item}})")
+            %span(ng-switch on="current_user_voted_for_this(poll_item)")
               %span(ng-switch-when='true')
                 .poll-item-btn.poll-item-btn-voted
                   %i.icon-chevron-up
