--- a/app/views/polls/show.html.haml
+++ b/app/views/polls/show.html.haml
@@ -35,17 +35,16 @@
               %span(ng-switch-when='true')
                 .poll-item-btn.poll-item-btn-voted
                   %i.icon-chevron-up
-                  / {{votes_count}}
+                  .poll-item-vote-count
+                    {{poll_item.votes_count}}
               %span(ng-switch-when='false')
                 .poll-item-btn(ng-click="voteObject(poll_item,$index)")
                   %i.icon-chevron-up
-                  %span(ng-show="votes_count > 0")
-                    / {{votes_count}}
+                  .poll-item-vote-count(ng-show="poll_item.votes_count > 0")
+                    {{poll_item.votes_count}}
           .poll-item-text
             %h2
               {{poll_item.title}}
-            %span
-              {{poll_item.votes_count}} Votes
           .poll-item-sharing
             %a.poll-item-btn
               %i.icon-share-alt
