[polls] styling updates

--- a/app/assets/stylesheets/voting.css.sass
+++ b/app/assets/stylesheets/voting.css.sass
@@ -2,8 +2,9 @@
 
 .poll-item
   width: 100%
-  height: 100px
-  margin: 10px 0px
+  height: 80px
+  padding: 5px 0px 
+  border-top: 1px solid gray
   float: left
   .poll-item-vote-up
     width: 7%
@@ -23,12 +24,11 @@
 
 .poll-item-btn
   @include raleway
-  font-weight: bold
   display: inline-block
   text-align: center
   width: 100%
   height: 100%
-  padding: 10px
+  padding: 5px
   font-size: 30px
   color: $light-gray
   background: $offwhite
@@ -41,7 +41,7 @@
     color: gray
 
 .poll-item-vote-count
-  margin-top: 10px
+  margin-top: 0px
 
 .poll-item-btn-voted
   background: $orange
