--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -59,5 +59,5 @@
                     .nav-search
                       = link_to 'javascript:void(0);', id: 'nav-search-toggle' do
                         %i.icon-search.icon-large
-                      = form_tag search_index_url, :method => :get, class: 'navbar-form form-search nav-search-form' do
-                        = text_field_tag :q, nil, :placeholder => 'search', class: 'search-query'
+                      = form_tag recipe_gallery_index_url, :method => :get, class: 'navbar-form form-search nav-search-form' do
+                        = text_field_tag :search_all, nil, :placeholder => 'search', class: 'search-query'
