--- a/app/views/home/_index_A.html.haml
+++ b/app/views/home/_index_A.html.haml
@@ -17,7 +17,7 @@
       .row
         .span4
           %h4.text-center 
-            = link_to 'Recipes', recipe_gallery_index_path, class: 'black-link'
+            = link_to 'Recipes', gallery_index_path(activity_type: "Recipe"), class: 'black-link'
           - cache @recipes do
             .swipe#recipe-swiper
               .swipe-wrap
@@ -27,7 +27,7 @@
                       = render 'shared/media_centered', media: recipe, size: 'medium'
         .span4
           %h4.text-center
-            = link_to 'Techniques', techniques_path, class: 'black-link'
+            = link_to 'Techniques', gallery_index_url(activity_type: "Technique"), class: 'black-link'
           - cache @techniques do
             .swipe#technique-swiper
               .swipe-wrap
@@ -37,7 +37,7 @@
                       = render 'shared/media_centered', media: technique, size: 'medium'
         .span4
           %h4.text-center
-            = link_to 'Knowledge', sciences_path, class: 'black-link'
+            = link_to 'Knowledge', gallery_index_url(activity_type: "Science"), class: 'black-link'
           - cache @sciences do
             .swipe#knowledge-swiper
               .swipe-wrap
