--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -27,8 +27,8 @@
                     %i.icon-angle-down
                   %ul.dropdown-menu
                     .dropdown-background
-                    %li= link_to 'Recipes', recipe_gallery_index_url
-                    %li= link_to 'Techniques', techniques_url
+                    %li= link_to 'Recipes', gallery_index_url(activity_type: "Recipe")
+                    %li= link_to 'Techniques', gallery_index_url(activity_type: "Technique")
                     -if admin_user_signed_in?
                       %li= link_to 'New Recipe', new_activity_url
                 %li.dropdown
@@ -40,7 +40,7 @@
                     .dropdown-background
                     / %li= link_to 'Sous Vide Course', course_url('accelerated-sous-vide-cooking-course')
                     %li= link_to 'Courses', courses_url
-                    %li= link_to 'Culinary Knowledge', sciences_url
+                    %li= link_to 'Science', gallery_index_url(activity_type: "Science")
                 %li
                   .nav-item-border
                   = link_to 'Community', 'http://forum.chefsteps.com'
@@ -59,5 +59,5 @@
                     .nav-search
                       = link_to 'javascript:void(0);', id: 'nav-search-toggle' do
                         %i.icon-search.icon-large
-                      = form_tag recipe_gallery_index_url, :method => :get, class: 'navbar-form form-search nav-search-form' do
+                      = form_tag gallery_index_url, :method => :get, class: 'navbar-form form-search nav-search-form' do
                         = text_field_tag :search_all, nil, :placeholder => 'search', class: 'search-query'
