--- a/app/views/shared/_gallery.html.haml
+++ b/app/views/shared/_gallery.html.haml
@@ -47,8 +47,11 @@
         %a(ng-click="filters.sort = choice")
           {{choice.name}}
 
+%h3(ng-show="activities.length == 0" ng-cloak)
+  No results found, but perhaps you'd enjoy these recipes?
+
 %div.pull-left(galleryscroll='load_data()')
-  .media-box-3(ng-cloak='' ng-repeat='activity in activities' ng-animate="'gallery-animation'")
+  .media-box-3(ng-cloak='' ng-repeat='activity in getActivities()' ng-animate="'gallery-animation'")
     %a(href= 'activities/{{activity.slug}}')
       .media-box-3-title
         {{activity.title}}
