all except responsive controls

--- a/app/views/shared/_gallery.html.haml
+++ b/app/views/shared/_gallery.html.haml
@@ -60,5 +60,5 @@
         .footer-left
           {{activity.difficulty}}
 
-.gallery-spinner(ng-show='spinner')
+.gallery-spinner(ng-show='spinner > 0')
   %i.icon-spinner.icon-spin.icon-large
