--- a/app/assets/stylesheets/gallery.css.sass
+++ b/app/assets/stylesheets/gallery.css.sass
@@ -68,5 +68,14 @@
   margin-top: -50px
   color: $orange
   font-size: 40px
+
+@media (max-width: 970px)
+  .gallery-filter, .gallery-filter .dropdown a
+    font-size: 14px !important
+
+    .search-query
+      display: block
+      margin-bottom: 15px
+
   
   
