fix search box styling

--- a/app/views/shared/_gallery.html.haml
+++ b/app/views/shared/_gallery.html.haml
@@ -1,6 +1,6 @@
 .gallery-filter.navbar(ng-cloak='')
 
-  %input.search-query(placeholder="Search..." ng-model="filters.search_all")
+  %input.search-query(type="search" placeholder="Search..." ng-model="filters.search_all")
 
   .dropdown
     .dropdown-toggle
