ingredient line wrapping

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -554,6 +554,7 @@ a:hover
 
   .ingredient-table-row
     width: 100%
+    line-height: 20px
   .ingredient-title
     width: 61%
   .quantity-group
@@ -565,7 +566,7 @@ a:hover
     width: 100%
     line-height: 30px
     font-size: 17.5px
-    border-bottom: 1px solid black
+    margin-bottom: 6px
     display: block
     font-weight: bold
     .quantity-group
@@ -582,12 +583,9 @@ a:hover
 
   #quantity
     text-align: right
+    margin-left: 22px
     .recipetip
       margin-left: -11px
-    .icon-question-sign
-      position: absolute
-      margin-left: 15px
-      margin-top: 5px
 
   form
     margin: 0px
@@ -604,7 +602,6 @@ a:hover
     .ingredient-table-row
       width: 100%
       display: block
-      height: 20px
       @include transition(opacity 500ms)
       .ingredient-title
         font-weight: 400
