--- a/app/views/activities/_ingredients_list.html.haml
+++ b/app/views/activities/_ingredients_list.html.haml
@@ -6,7 +6,7 @@
         #ingredient.ingredient-title Ingredient
         #quantity.quantity-group(ng-hide="editMode" tooltip="Click on quantity column header to change units, or any value to scale the recipe.")
           %a.change_units Quantity
-          %i.fakelink.icon-question-sign
+          %i.fake-link.icon-question-sign
         .quantity-group(ng-show="editMode")
           Quantity
 
