--- a/app/views/admin/polls/_form.html.haml
+++ b/app/views/admin/polls/_form.html.haml
@@ -1,5 +1,10 @@
-= semantic_form_for @poll do |f|
-  = f.inputs :title, :description
-  = f.inputs :status
-  = f.inputs :title, :description, :for => :poll_items
+= semantic_form_for [:admin, @poll] do |f|
+  = f.inputs do
+    = f.input :title
+    = f.input :description
+    = f.input :status
+
+  %h2 Poll Items
+  = f.semantic_fields_for :poll_items do |builder|
+    = render 'poll_item_fields', f: builder
   = f.actions
