--- a/app/views/admin/polls/_form.html.haml
+++ b/app/views/admin/polls/_form.html.haml
@@ -5,6 +5,7 @@
     = f.input :status
 
   %h2 Poll Items
+  = link_to_add_fields "Add Poll Item", f, :poll_items
   = f.semantic_fields_for :poll_items do |builder|
     = render 'poll_item_fields', f: builder
   = f.actions
