--- a/app/assets/stylesheets/voting.css.sass
+++ b/app/assets/stylesheets/voting.css.sass
@@ -2,7 +2,7 @@
 
 .poll-item
   width: 100%
-  height: 80px
+  //height: 80px
   padding: 5px 0px 
   border-top: 1px solid gray
   float: left
@@ -13,6 +13,9 @@
   .poll-item-text
     width: 72%
     float: left
+    .poll-item-details-btn
+      &:hover
+        cursor: pointer
   .poll-item-sharing
     width: 9%
     margin-left: 1%
@@ -27,7 +30,7 @@
   display: inline-block
   text-align: center
   width: 100%
-  height: 100%
+  height: 80px
   padding: 5px
   font-size: 30px
   color: $light-gray
