--- a/app/views/admin/polls/_poll_item_fields.html.haml
+++ b/app/views/admin/polls/_poll_item_fields.html.haml
@@ -1,4 +1,5 @@
 = f.inputs do
   = f.input :title
+  = f.input :description
   = f.hidden_field :_destroy
   = link_to 'remove', '#', class: 'remove_fields'
