--- a/app/assets/stylesheets/voting.css.sass
+++ b/app/assets/stylesheets/voting.css.sass
@@ -25,6 +25,9 @@
     margin-left: 1%
     float: left
 
+.poll-item-details
+  margin-left: 8%
+
 .poll-item-btn
   @include raleway
   display: inline-block
