--- a/app/views/polls/show.html.haml
+++ b/app/views/polls/show.html.haml
@@ -26,10 +26,16 @@
               %h2
                 {{poll_item.title}}
           .poll-item-sharing
-            %a.poll-item-btn
+            %a.poll-item-btn.poll-item-btn-social(ng-click='pollItemShare(poll_item)')
               %i.icon-share-alt
+            .poll-item-sharing-social-buttons(ng-show='poll_item.show_sharing')
+              = link_to "https://plus.google.com/share?url=#{current_url(request)}", onclick: "javascript:window.open(this.href,
+              '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;", class: 'poll-item-btn poll-item-btn-social' do
+                %i.icon-google-plus
+              %a.poll-item-btn.poll-item-btn-social(href="https://twitter.com/intent/tweet?text=I voted for {{poll_item.title}} on @ChefSteps!&url=#{ url_encode(current_url(request))}")
+                %i.icon-twitter
           .poll-item-comments
-            %a.poll-item-btn
+            %a.poll-item-btn.poll-item-btn-social
               %i.icon-comment-alt
         .poll-item-details(ng-show='poll_item.show_details')
           %p {{poll_item.description}}
