--- a/app/views/layouts/_mixpanel.html.haml
+++ b/app/views/layouts/_mixpanel.html.haml
@@ -8,7 +8,7 @@
   :javascript
     mixpanel.identify("#{current_user.email}");
     mixpanel.name_tag("#{current_user.name}");
-    var currentUserName = "#{current_user.name}";
+    mixpanel.people.set({ "$first_name": "#{current_user.name}", "$created": "#{current_user.created_at.strftime("%YYYY-%mm-%dd%HH:%MM%SS")}", "$email":"#{current_user.email}" });
  
 
 
