--- a/app/assets/stylesheets/voting.css.sass
+++ b/app/assets/stylesheets/voting.css.sass
@@ -14,7 +14,8 @@
   width: 72%
   float: left
   h2
-    margin: 20px 0px
+    margin: 25px 0px 5px
+    line-height: 32px
   .poll-item-details-btn
     &:hover
       cursor: pointer
@@ -28,10 +29,6 @@
   width: 9%
   margin-left: 1%
   float: left
-
-.poll-item-details
-  .poll-item-text
-    margin-left: 8%
 
 .poll-item-btn
   @include raleway
