--- a/app/views/polls/show.html.haml
+++ b/app/views/polls/show.html.haml
@@ -21,24 +21,26 @@
                   %i.icon-angle-up
                   .poll-item-vote-count(ng-show="poll_item.votes_count > 0")
                     {{poll_item.votes_count}}
+
           .poll-item-text(ng-click='pollItemDetails(poll_item)')
             %a.poll-item-details-btn
               %h2
                 {{poll_item.title}}
-          .poll-item-sharing(ng-click='pollItemDetails(poll_item)')
-            %a.poll-item-btn.poll-item-btn-social
-              %i.icon-share-alt
+            %div(ng-show='poll_item.show_details')
+              %p.lead {{poll_item.description}}
+
           .poll-item-comments(ng-click='pollItemDetails(poll_item)')
             %a.poll-item-btn.poll-item-btn-social
               %i.icon-comment-alt
-        .poll-item-details(ng-show='poll_item.show_details')
-          .poll-item-text
-            %h3 {{poll_item.description}}
-          .poll-item-sharing
-            %a.poll-item-btn.poll-item-btn-social(onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=#{current_url(request)}','facebook-share-dialog','width=626,height=436');return false;")
-              %i.icon-facebook
-            = link_to "https://plus.google.com/share?url=#{current_url(request)}", onclick: "javascript:window.open(this.href,
-            '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;", class: 'poll-item-btn poll-item-btn-social' do
-              %i.icon-google-plus
-            %a.poll-item-btn.poll-item-btn-social(href="https://twitter.com/intent/tweet?text=I voted for {{poll_item.title}} on @ChefSteps!&url=#{ url_encode(current_url(request))}")
-              %i.icon-twitter
+
+          .poll-item-sharing(ng-click='pollItemDetails(poll_item)')
+            %a.poll-item-btn.poll-item-btn-social
+              %i.icon-share-alt
+            %div(ng-show='poll_item.show_details')
+              %a.poll-item-btn.poll-item-btn-social(onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=#{current_url(request)}','facebook-share-dialog','width=626,height=436');return false;")
+                %i.icon-facebook
+              = link_to "https://plus.google.com/share?url=#{current_url(request)}", onclick: "javascript:window.open(this.href,
+              '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;", class: 'poll-item-btn poll-item-btn-social' do
+                %i.icon-google-plus
+              %a.poll-item-btn.poll-item-btn-social(href="https://twitter.com/intent/tweet?text=I voted for {{poll_item.title}} on @ChefSteps!&url=#{ url_encode(current_url(request))}")
+                %i.icon-twitter
