--- a/app/assets/stylesheets/voting.css.sass
+++ b/app/assets/stylesheets/voting.css.sass
@@ -61,3 +61,64 @@
     cursor: pointer
     background: $orange
     color: white
+
+@media (min-width: 481px) and (max-width: 979px)
+  .poll-item
+    font-size: 16px
+
+  .poll-item-vote-up
+
+  .poll-item-text
+    h2
+      font-size: 20px
+      margin: 10px 0px 5px
+    p
+      font-size: 16px
+
+  .poll-item-sharing
+
+  .poll-item-comments
+
+  .poll-item-btn
+    height: 50px
+    font-size: 20px
+
+  .poll-item-btn-social
+    padding: 15px
+
+@media (max-width: 480px)
+  .poll-item
+    font-size: 16px
+
+  .poll-item-vote-up
+    width: 15%
+    margin-right: 1%
+    float: left
+  .poll-item-text
+    width: 54%
+    float: left
+    h2
+      font-size: 16px
+      margin: 10px 0px 5px
+    p
+      font-size: 16px
+    .poll-item-details-btn
+      &:hover
+        cursor: pointer
+  .poll-item-sharing
+    width: 14%
+    margin-left: 1%
+    float: left
+    position: relative
+
+  .poll-item-comments
+    width: 14%
+    margin-left: 1%
+    float: left
+
+  .poll-item-btn
+    height: 50px
+    font-size: 20px
+
+  .poll-item-btn-social
+    padding: 15px 0px
