--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -64,6 +64,12 @@
         .row#main-content
           = render 'main_activity_content', activity: @activity
 
+    -# Big spinner until the activity loads. By not cloaking but using angular to hide, it
+    -# disappears roughly when the page is ready.
+    .row.activity-loading-spinner(ng-hide="true")
+      .span12
+        %i.icon-spinner.icon-spin
+
 -################################ BOTTOM OF PAGE CONTENT ################################
 
 - content_for :bottom do
@@ -83,7 +89,7 @@
               %div{class: "horizontal-slider-shadow-overlay-right"}
 
     - if (! ENV["CS_NO_SUGGESTED_ACTIVITIES"]) && @techniques && @recipes
-      .row(ng-hide="editMode")
+      .row(ng-hide="editMode" ng-cloak)
         .span12
           %h3 Techniques
           #technique-carousel
@@ -93,7 +99,7 @@
           #related-carousel
             = render 'shared/horizontal_slider', items: @recipes, direction: 'right'
     - if ! ENV["CS_NO_DISQUS"]
-      .row(ng-hide="editMode")
+      .row(ng-hide="editMode" ng-cloak)
         .span12
           %h3 Discussion
           .section
