more reliable way of knowing when gallery scroll is complete

--- a/app/views/gallery/index.html.haml
+++ b/app/views/gallery/index.html.haml
@@ -4,7 +4,7 @@
 
 .container.gallery-wrapper
   .row
-    .span12#gallery-count{:'gallery-count' => "#{@recipes_count}"}
+    .span12
       %div(ng-controller='GalleryController')
         / .flat-form
         /   %form
