[image] added helper

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -927,7 +927,7 @@ a:hover
 
 .btn-play-image
   position: relative
-  background: image-url('play-button.png') no-repeat
+  background: image-url('https://www.filepicker.io/api/file/IOjE35SKSmCjut9x1FBg?cache=true') no-repeat
   width: 34px
   height: 34px
   margin: 33px 10px 20px 33px
