--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -12,13 +12,13 @@
                 Taught by a world-renowned team, you will master techniques of traditional and modernist cooking through practical, hands-on demonstrations with detailed step-by-step explanations. Unlike at other culinary schools, you will also learn the why's behind the how's from experts who bring the science of cooking to life in a compelling and practical way.
               .section
                 = link_to about_path do
-                  = image_tag 'chris.jpg', class:'img-circle'
+                  = image_tag chris_image_url, class:'img-circle'
 
                 = link_to about_path do
-                  = image_tag 'grant.jpg', class:'img-circle'
+                  = image_tag grant_image_url, class:'img-circle'
 
                 = link_to about_path do
-                  = image_tag 'ryan.jpg', class:'img-circle'
+                  = image_tag ryan_image_url, class:'img-circle'
 
             .span4.offset1
               %h3 Contact
@@ -39,7 +39,7 @@
                 = link_to 'Legal', legal_url
               %p.creative-commons
                 %a{ href: 'http://creativecommons.org/licenses/by-nc-sa/3.0', target: '_blank' }
-                  = image_tag 'by-nc-sa.png'
+                  = image_tag by_nc_sa_image_url
               %p
                 %a{href: 'https://mixpanel.com/f/partner'}
                   %img{src: '//cdn.mxpnl.com/site_media/images/partner/badge_blue.png', alt: 'Mobile Analytics'}
