--- a/app/views/home/about.html.haml
+++ b/app/views/home/about.html.haml
@@ -2,63 +2,58 @@
   .row
     %br
     .span6
-      = image_tag('http://placehold.it/500x300')
+      = image_tag('https://www.filepicker.io/api/file/dFzpH7W3TkyA6XtngZFc')
     .span6
       %h2 Cook. Forward.
-      %p ChefSteps is absolutely free to learn. How are we going to make money? By selling products to you that help you succeed in the kitchen. We're starting off with small stuff like spatulas, scales, and some big stuff, too, like immersion circulators and water ovens. In the end, our community will be the ones that will allow us to succeed, so join us and help yourself kick ass in the kitchen! 
+      %p ChefSteps is a totally new approach to learning the art and science of cooking. Whether you are a professional chef, a culinary student, or a cooking enthusiast, if you are also a curious cook then ChefSteps is for you.
 
   .row.section
     .span12  
       %h2.text-center Founded by
   .row
     .span4.text-center
-      = image_tag('http://placehold.it/150x150', title: 'Chris Young', class: 'img-circle')
+      = image_tag('https://www.filepicker.io/api/file/CgGfV60UTwKQpFqBkmX4?cache=true', title: 'Chris Young', class: 'img-circle')
       %h3 Chris Young
-      %p Nullam id dolor id nibh ultricies vehicula ut id elit. Donec id elit non mi porta gravida at eget metus.
     .span4.text-center
-      = image_tag('http://placehold.it/150x150', title: 'Grant Lee Crilly', class: 'img-circle')
+      = image_tag('https://www.filepicker.io/api/file/eRfg2GubR3y9F22cFDLM?cache=true', title: 'Grant Lee Crilly', class: 'img-circle')
       %h3 Grant Lee Crilly
-      %p Nullam id dolor id nibh ultricies vehicula ut id elit. Donec id elit non mi porta gravida at eget metus.
     .span4.text-center
-      = image_tag('http://placehold.it/150x150', title: 'Ryan Matthew Smith', class: 'img-circle')
+      = image_tag('http://d1w42w8pbelamn.cloudfront.net/assets/ryan-84d486f3332c411371d25d143d80db64.jpg', title: 'Ryan Matthew Smith', class: 'img-circle')
       %h3 Ryan Matthew Smith
-      %p Nullam id dolor id nibh ultricies vehicula ut id elit. Donec id elit non mi porta gravida at eget metus.
   %hr
   .row.section
     .span12
     %h2.text-center The Team
-    - team = {'ben' => 'development chef', 'nick' => 'development chef', 'michael' => 'CTO', 'huy' => 'web developer', 'hans' => 'director of audio', ' lorraine' => 'social media', 'kristina' => 'photo/visuals', 'ed' => 'director of business operations', 'tim' => 'designer' }.sort.each do |bio_name, position|
-      .span3.text-center
+    - team = {'ben' => 'development chef', 'nick' => 'development chef', 'michael' => 'CTO', 'huy' => 'web developer', 'hans' => 'director of audio', ' lorraine' => 'social media', 'kristina' => 'multimedia pm', 'ed' => 'director of business operations', 'tim' => 'product design' }.sort.each do |bio_name, position|
+      .span3.text-center.section
         = image_tag('http://placehold.it/100x100',  title: 'title', class: 'img-circle')
         %h4= "#{bio_name}"
         %h5= "#{position}"
   %hr
   .row.section
-    .span4
+    .span6
       .row
         %h4 Want to Join Us?
-        %p We're looking for Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas sed diam eget risus varius blandit sit amet non magna.
-      .row
-        %h4 Visit the blog and see what we're up to.
+        %p We're looking for some folks to help us define the future of online cooking school and recipes. 
+        = link_to "Check out our open positions.", "/jobs"
+    .span6
+      - blog = parse_feed("http://blog.chefsteps.com/feed/")
+      %h4 Blog
+      %h5= link_to blog.items.first.title.html_safe, "#{blog.items.first.link}"
+      %p #{blog.items.first.description.html_safe}
 
-    .span8
-      %h4 Contact Us
-      = email_field_tag 'email', nil, {class: 'input-signup-email', placeholder: 'Enter email', required: true}
-      = email_field_tag 'note', nil, {class: 'input-signup-email', placeholder: 'Your message here', required: true}      
-      = submit_tag 'Sign Up Now', class: 'btn btn-secondary', id: 'subscribe-email'
-
-  .row.section
-    .span12
-      %h2.text-center Press
-    .row
-      .span3
-        = image_tag ('http://placehold.it/100x100')
-      .span3
-        = image_tag ('http://placehold.it/100x100')
-      .span3
-        = image_tag ('http://placehold.it/100x100')
-      .span3
-        = image_tag ('http://placehold.it/100x100')
+  /.row.section
+  /  .span12
+  /    %h2.text-center Press
+  /  .row
+  /    .span3
+  /      = image_tag ('http://placehold.it/100x100')
+  /    .span3
+  /      = image_tag ('http://placehold.it/100x100')
+  /    .span3
+  /      = image_tag ('http://placehold.it/100x100')
+  /    .span3
+  /      = image_tag ('http://placehold.it/100x100')
 
 = content_for :footer do
   = render 'layouts/footer'
